# libghostty-rs

./: AGENTS.md  Cargo.toml  README.md  flake.nix  release.sh
.github/workflows/: ci.yml  release.yml  windows-ci.yml
crates/libghostty-vt/: Cargo.toml
crates/libghostty-vt-sys-vendored/: Cargo.toml  README.md  SHA256SUMS  build.rs
crates/libghostty-vt-sys-vendored/src/: lib.rs
crates/libghostty-vt/src/: lib.rs  render.rs  screen.rs  selection.rs  terminal.rs
example/ghostling_rs/src/: main.rs
fuzz/afl/: valgrind.sh
