[package]
name = "libghostty-vt"
description = "Safe Rust API for libghostty-vt, the Ghostty terminal emulation library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["kitty-graphics"]
allocator_api = ["dep:allocator-api2"]
kitty-graphics = ["libghostty-vt-sys/kitty-graphics"]
png = ["dep:png"]
log = ["dep:log"]
link-dynamic = ["libghostty-vt-sys/link-dynamic"]

[dependencies]
allocator-api2 = { version = "0.4.0", optional = true }
bitflags = "2.11.0"
# Aliased to `libghostty-vt-sys` so `use libghostty_vt_sys` paths are unchanged.
# The vendored crate downloads a prebuilt native library instead of building
# from source with Zig. To build from source, depend on `libghostty-vt-sys`
# directly or set GHOSTTY_VT_PREBUILT_DIR.
libghostty-vt-sys = { package = "libghostty-vt-sys-vendored", path = "../libghostty-vt-sys-vendored", version = "0.1.1" }
int-enum = "1.2.0"
png = { version = "0.18.1", optional = true }
log = { version = "0.4.29", optional = true }

[dev-dependencies]
libghostty-vt-sys = { package = "libghostty-vt-sys-vendored", path = "../libghostty-vt-sys-vendored", version = "0.1.1" }

[package.metadata.docs.rs]
all-features = true
